# mosaic

./: .gitignore  README.md
mosaic/: Cargo.toml  rust-toolchain.toml
mosaic-cli/: Cargo.toml
mosaic-cli/src/: config.rs  handlers.rs  main.rs  types.rs
mosaic/src/: errors.rs  lib.rs  processor.rs  seeds.rs
mosaic/src/instructions/: execute.rs  init_root.rs  init_signing_session.rs  mod.rs  sign.rs
mosaic/src/state/: mod.rs  root.rs  signing_session.rs
mosaic/tests/: execute.rs  execute_failures.rs  init_root.rs  init_root_failures.rs  init_signing_session.rs  init_signing_session_failures.rs  sign.rs  sign_failures.rs
mosaic/tests/common/: mod.rs
