[package]
name = "mosaic-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
solana-sdk = "3.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
